--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ jobs:
             comments="true"
             gh pr view "$CIRCLE_PULL_REQUEST" --comments --json comments --jq '.comments[]|contains({"author":{ login: "sumireapps" }})' | while read iscomment; do
               comments=${iscomment}
-              if [ ${iscomment} = "true ]; then
+              if [ ${iscomment} = "true" ]; then
                 exit 0
               fi
             done
