--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           command: |
             touch comment.txt
             length=$(cat artifact.json | jq -c '.items[] | length')
-            echo length
+            echo $length
             if [ $length -gt 0 ]; then
               echo "VRT Result" > comment.txt
               echo "| changed |" >> comment.txt
