--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,7 @@ jobs:
           command: |
             touch comment.txt
             length=$(cat artifact.json | jq -c '.items | length')
+            echo $length
             if [ $length -gt 0 ]; then
               echo "VRT Result" > comment.txt
               echo "| changed |" >> comment.txt
@@ -109,7 +110,7 @@ jobs:
           command: |
             echo "$GITHUB_APP_TOKEN" | gh auth login --with-token
             comments="false"
-            gh pr view "$CIRCLE_PULL_REQUEST" --comments --json comments --jq '.comments[]|contains({"author":{ login: "sumire-apps" }})' | while read iscomment; do
+            gh pr view "$CIRCLE_PULL_REQUEST" --comments --json comments --jq '.comments[]|contains({"author":{"login":"sumire-apps"}})' | while read iscomment; do
               comments=${iscomment}
               if [ ${iscomment} = "true" ]; then
                 exit 0
