--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
               echo "|-------|" >> comment.txt
               cat artifact.json | \
               jq -c '.items[]' | while read artifact; do
-                echo "| $(echo $artifact | jq -r '.url') |" >> comment.txt
+                echo "| [$(echo $artifact | jq -r '.path')]($(echo $artifact | jq -r '.url')) |" >> comment.txt
               done
             else
               echo "VRT Result" > comment.txt
