--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,14 +42,14 @@
         </service>
 
         <receiver
-            android:name=".receiver.WidgetReceiver"
+            android:name=".receiver.SmallArtworkWidgetReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/widget_meta_data" />
+                android:resource="@xml/small_artwork_widget_meta_data" />
         </receiver>
     </application>
 
