--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,15 +13,16 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycle = "2.8.6"
 activityCompose = "1.9.2"
-composeBom = "2024.09.02"
+composeBom = "2024.09.03"
 appcompat = "1.7.0"
 material = "1.12.0"
 material3Android = "1.3.0"
-navigation = "2.8.1"
+navigation = "2.8.2"
 coroutine = "1.9.0"
+paging = "3.3.2"
 koin = "4.0.0"
 roborazziGradlePlugin = "1.28.0"
-uiTooling = "1.7.2"
+uiTooling = "1.7.3"
 datetime = "0.6.1"
 room = "2.6.1"
 serialization = "1.7.3"
@@ -62,10 +63,16 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+androidx-room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room" }
+
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 coroutine-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutine" }
 androidX-lifecycleCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
+
+paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
+paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 roborazzi-gradle-plugin = { module = "io.github.takahirom.roborazzi:roborazzi-gradle-plugin", version.ref = "roborazziGradlePlugin" }
@@ -102,8 +109,9 @@ glance-previewer = { group = "com.google.android.glance.tools", name = "appwidge
 workmanager-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workmanager" }
 
 [bundles]
-androidx-room = ["androidx-room-runtime", "androidx-room-ktx"]
+androidx-room = ["androidx-room-runtime", "androidx-room-ktx", "androidx-room-paging"]
 androidx-room-ksp = ["androidx-room-compiler"]
+paging = ["paging-runtime", "paging-compose"]
 ktor-client = ["ktor-client", "ktor-client-connect", "ktor-client-logging", "ktor-serialization"]
 slf4j = ["slf4j-android"]
 coil = ["coil", "coil-compose"]
