--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,6 @@ navigation = "2.8.2"
 coroutine = "1.9.0"
 paging = "3.3.2"
 koin = "4.0.0"
-roborazziGradlePlugin = "1.28.0"
 uiTooling = "1.7.3"
 datetime = "0.6.1"
 room = "2.6.1"
@@ -31,7 +30,7 @@ slf4j = "1.7.36"
 coil = "2.7.0"
 settings = "2.4.0"
 showkase = "1.0.3"
-roborazzi = "1.26.0"
+roborazzi = "1.29.0"
 detekt = "1.23.7"
 glance = "1.1.0"
 workmanager = "2.9.1"
@@ -78,7 +77,7 @@ paging-compose = { group = "androidx.paging", name = "paging-compose", version.r
 
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
-roborazzi-gradle-plugin = { module = "io.github.takahirom.roborazzi:roborazzi-gradle-plugin", version.ref = "roborazziGradlePlugin" }
+roborazzi-gradle-plugin = { module = "io.github.takahirom.roborazzi:roborazzi-gradle-plugin", version.ref = "roborazzi" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "datetime" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
