--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ agp = "8.6.1"
 ksp = "2.0.20-1.0.25"
 kotlin = "2.0.10"
 coreKtx = "1.13.1"
+splashscreen = "1.0.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -42,6 +43,7 @@ android-application-plugin = { group = "com.android.application", name = "com.an
 android-library-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "agp" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashcreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
