--- a/.github/workflows/deploygate-debug.yml
+++ b/.github/workflows/deploygate-debug.yml
@@ -5,11 +5,14 @@ on:
     branches:
       - develop
 jobs:
-  prod-deploy:
+  debug-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: chmod gradlew
+        run: |
+          chmod +x gradlew
       - name: create local.properties
         run: |
           touch local.properties
