--- a/.github/workflows/deploygate-release.yml
+++ b/.github/workflows/deploygate-release.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: chmod gradlew
+        run: |
+          chmod +x gradlew
       - name: create local.properties
         run: |
           touch local.properties
