--- a/.github/workflows/deploygate-release.yml
+++ b/.github/workflows/deploygate-release.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: chmod gradlew
         run: |
           chmod +x gradlew
