--- a/.github/workflows/deploygate-debug.yml
+++ b/.github/workflows/deploygate-debug.yml
@@ -27,4 +27,4 @@ jobs:
           ./gradlew assembleDebug
       - name: deploy debug
         run:
-          ./gradlew uploadDeployGateDebug
+          ./gradlew uploadDeployGateDebug --stacktrace
