--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,16 @@ jobs:
           command:
             touch local.properties
       - run:
+          name: siging.properties
+          command: |
+            touch siging.properties
+            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+      - run:
+          name: debug.jks
+          command: |
+            touch debug.jks
+            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+      - run:
           name: build
           command: |
             ./gradlew assembleDebug
@@ -76,6 +86,16 @@ jobs:
           command:
             touch local.properties
       - run:
+          name: siging.properties
+          command: |
+            touch siging.properties
+            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+      - run:
+          name: debug.jks
+          command: |
+            touch debug.jks
+            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+      - run:
           name: UnitTest
           command: |
             ./gradlew testDebugUnitTest
@@ -96,6 +116,16 @@ jobs:
           name: local.properties
           command:
             touch local.properties
+      - run:
+          name: siging.properties
+          command: |
+            touch siging.properties
+            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+      - run:
+          name: debug.jks
+          command: |
+            touch debug.jks
+            echo "$DEBUG_JKS" | base64 -d >> debug.jks
       - run:
           name: take screenshot
           command: |
@@ -128,6 +158,16 @@ jobs:
           command:
             touch local.properties
       - run:
+          name: siging.properties
+          command: |
+            touch siging.properties
+            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+      - run:
+          name: debug.jks
+          command: |
+            touch debug.jks
+            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+      - run:
           name: take screenshot
           command: |
             ./gradlew recordRoborazziDebug --stacktrace
@@ -158,6 +198,16 @@ jobs:
           name: local.properties
           command:
             touch local.properties
+      - run:
+          name: siging.properties
+          command: |
+            touch siging.properties
+            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+      - run:
+          name: debug.jks
+          command: |
+            touch debug.jks
+            echo "$DEBUG_JKS" | base64 -d >> debug.jks
       - run:
           name: compare screenshot
           command: |
