--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: detekt
           command: |
@@ -66,12 +66,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: build
           command: |
@@ -99,12 +99,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: UnitTest
           command: |
@@ -130,12 +130,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: take screenshot
           command: |
@@ -171,12 +171,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: take screenshot
           command: |
@@ -212,12 +212,12 @@ jobs:
           name: siging.properties
           command: |
             touch siging.properties
-            echo "$SIGING_PROPERTIES" | base64 -d >> siging.properties
+            echo $SIGING_PROPERTIES | base64 -d >> siging.properties
       - run:
           name: debug.jks
           command: |
             touch debug.jks
-            echo "$DEBUG_JKS" | base64 -d >> debug.jks
+            echo $DEBUG_JKS | base64 -d >> debug.jks
       - run:
           name: compare screenshot
           command: |
