--- a/.github/workflows/deploygate-debug.yml
+++ b/.github/workflows/deploygate-debug.yml
@@ -32,8 +32,8 @@ jobs:
           echo "${{ secrets.DEBUG_JKS }}" | base64 -d >> debug.jks
       - name: create google-services.json
         run:
-          touch google-services.json
-          echo "${{ secrets.DEBUG_SERVICE_JSON }}" | base64 -d >> google-services.json
+          touch ./app/src/debug/google-services.json
+          echo "${{ secrets.DEBUG_SERVICE_JSON }}" | base64 -d >> ./app/src/debug/google-services.json
       - name: build debug
         run:
           ./gradlew assembleDebug
