--- a/.github/workflows/deploygate-debug.yml
+++ b/.github/workflows/deploygate-debug.yml
@@ -31,7 +31,7 @@ jobs:
           touch debug.jks
           echo "${{ secrets.DEBUG_JKS }}" | base64 -d >> debug.jks
       - name: create google-services.json
-        run:
+        run: |
           touch ./app/src/debug/google-services.json
           echo "${{ secrets.DEBUG_SERVICE_JSON }}" | base64 -d >> ./app/src/debug/google-services.json
       - name: build debug
