add: release build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -291,7 +291,7 @@ workflows:
           filters:
             branches:
               only:
-                - "master"
+                - "develop"
   build-test:
     jobs:
       - lint:
